# modorganizer-bsapacker

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
src/: ArchiveAutoService.cpp  ArchiveBuilderFactory.cpp  ArchiveNameService.cpp  BsaPackerWorker.cpp  CMakeLists.txt  ModContext.cpp  MorrowindArchiveBuilder.cpp  OverrideFileService.cpp  OverrideFileService.h  TextureArchiveBuilder.cpp
src/bsapacker/: IArchiveAutoService.h  IArchiveBuilder.h  IOverrideFileService.h  MorrowindArchiveBuilder.h
